@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="ISO-8859-1"?>
 <xsl:stylesheet version="1.0" xmlns:xsl="http://www.w3.org/1999/XSL/Transform">
 
-  <xsl:template match="$project/navSections">
+  <xsl:template match="/project/navSections">
     <xsl:for-each select="section">
       <table border="0" cellpadding="0" cellspacing="0">
         <tr>
